# CSE-AdvProg

./: .gitignore  README.md  performance.md
assets/images/: 3dplot.jpeg:Zone.Identifier  basic_case.png:Zone.Identifier
results/: .~lock.results.csv#  results.csv
src/: CMakeLists.txt  Domain.cpp  EllipticPDE.cpp  Initiation.cpp  Mesh.cpp  PostProcessing.cpp  Solver.cpp  Utilities.cpp  gmon.out  inputoutput.cpp  main  main.cpp  numerical.cpp  numerical.h  pde_solver  perf.txt  utils.cpp  utils.h
src/headers/: Domain.h  EllipticPDE.h  Initiation.h  Mesh.h  PostProcessing.h  Solver.h  Utilities.h  inputoutput.h  numerical.h  utils.h
